static/styles.css
/* Hide scrollbars */
body::-webkit-scrollbar {
    display: none;
}

body {
    background-color: #1e2337;
    color: white;
    font-family: 'Inter', sans-serif;
    margin: 0;
    overflow: hidden; /* Hide scrollbars */
    display: flex;
    flex-direction: column;
    height: 100vh;
    justify-content: space-between;
    align-items: center;
    text-align: center;
}

header {
    width: 100%;
    padding: 20px;
    text-align: left;
}

.logo {
    font-weight: bold;
    font-size: 24px;
    margin-left: 20px; /* Add margin to the left */
}

main {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.buttons {
    display: flex;
    flex-direction: column;
    gap: 30px; /* Add more space between buttons */
}

button {
    background: linear-gradient(90deg, #2d83ec, #1ac9ff);
    border: none;
    border-radius: 5px;
    color: white;
    padding: 15px 30px;
    font-size: 16px;
    cursor: pointer;
}

button:hover {
    opacity: 0.9;
}

.bag-id-container {
    margin-top: 20px;
    text-align: center;
}

.bag-id {
    display: block;
    margin-top: 10px;
    padding: 10px;
    border-radius: 5px;
    cursor: pointer;
}

.copy-instruction {
    font-size: 12px;
    color: #ccc;
}

footer {
    padding: 20px;
}

